some jvm stuff adjustments